--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-  <h2>روی تصویر کلیک کن تا زوم شود 🔍</h2>
-  <img id="zoomImage" src="sample.jpg" alt="تصویر نمونه">
+  <h2>جک برقی صندوق عقب YLZ 🔍</h2>
+  <img id="zoomImage" src="JACC.jpeg" alt="تصویر نمونه">
 
   <script>
     const img = document.getElementById("zoomImage");
